<?xml version="1.0"?>
<package>
  <name>etna_s3li_playback</name>
  <version>0.0.0</version>
  <description>ROS package to playback data from DLR etna s3li dataset</description>
  <maintainer email="giacomo.franchini@polito.it">user</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>catkin</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- <run_depend>TODO: Your run dependencies here</run_depend> -->

</package>